set header's max width, fix events list on mobile

--- a/src/components/UI/molecules/IndexButtonList/IndexButtonList.css
+++ b/src/components/UI/molecules/IndexButtonList/IndexButtonList.css
@@ -29,6 +29,13 @@
     background-image: url(../../../../assets/last-page.svg);
 }
 
+/* CSS Mobile */
+@media only screen and (max-width: 480px) {
+    #index-button-list {
+        width: 100%;
+    }
+}
+
 @media only screen and (min-width: 1600px) {
     #index-button-list {
         top: 780px;
