--- a/src/components/UI/organisms/Events/Events.css
+++ b/src/components/UI/organisms/Events/Events.css
@@ -124,7 +124,7 @@
 }
 
 .events-container2 {
-    height: 480px;
+    height: 900px;
     width: 100vw;
 }
 
